Remove legacy partner auth flow
